ecmascript/parser/tests/test262-error-references/fail/5855e0715bd298ae.js.stderr
error: 'import', and 'export' cannot be used outside of module code
 --> $DIR/tests/test262-parser/fail/5855e0715bd298ae.js:1:1
  |
1 | import default from "foo"
  | ^^^^^^

